web-infras/parser/tests/fixtures/babel/core/uncategorised/494/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,50)
1|function hello() {'use strict'; ({ s: function s(eval) { } }); }
 |                                                ^
[SyntaxError]: 'arguments'/'eval' can't be defined or assigned to in strict mode code (1,50)
1|function hello() {'use strict'; ({ s: function s(eval) { } }); }
 |                                                ^
